# SAETopic

./: .gitignore  README.md  pyproject.toml  saetm_eval_reference.jsonl  saetm_eval_reference_1.jsonl
docs/: PRD.md  api.md  model_format.md  pretraining.md  quickstart.md  vision.md
examples/: BERTopic_news20k.py  build_news20k_topic_model.py  build_text_topic_models.py  build_topic_model.py  evaluate_topic_words.py  quickstart_local.py  quickstart_text.py  train_sae_example.py  train_sae_streaming.py
pretrain/: README.md  count_tokens.py  jina_text_v5_finewiki.py  params.yaml  params.yaml.example  run.py  topics.csv
results/news20k/topics_100/: summary.json  top_words.txt  topic_info.csv
results/news20k/topics_200/: summary.json  top_words.txt  topic_info.csv
results/news20k/topics_300/: summary.json  top_words.txt  topic_info.csv
results/news20k/topics_50/: summary.json  top_words.txt  topic_info.csv
results/news20k/topics_500/: summary.json  top_words.txt  topic_info.csv
src/saetopic/: __init__.py  cli.py  config.py  embeddings.py  evaluation.py  hf_utils.py  merging.py  model.py  representation.py  serialization.py  vectorizers.py  visualization.py
src/saetopic/interpretation/: __init__.py  corpus_adapter.py  feature_words.py
src/saetopic/sae/: __init__.py  activations.py  loaders.py  modules.py
src/saetopic/training/: __init__.py  __main__.py  cli.py  data.py  train_sae.py
tests/: __init__.py  test_cli.py  test_config.py  test_corpus_adapter.py  test_evaluation.py  test_imports.py  test_model.py  test_pretrain.py  test_pretrain_run.py  test_streaming.py  test_training.py  test_vectorizers.py
vision_probe/: feature_summary.csv  samples.jsonl  summary.json
vision_probe/mini_imagenet/: feature_summary.csv  samples.jsonl  summary.json
vision_probe/mini_imagenet_32/: feature_summary.csv  summary.json
